--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -106,17 +106,18 @@ nav a.router-link-exact-active {
 
 /* home */
 
-html, body {
+html {
     height: 100%;
     margin: 0;
     overflow: hidden;
 }
 
 body {
+    height: 100%;
     perspective: 1px;
     transform-style: preserve-3d;
     overflow-x: hidden;
-    overflow-y: auto; /* Allows scrolling */
+    overflow-y: auto; 
     background: #050505;
 }
 
@@ -133,7 +134,7 @@ body {
 
 #home, #about {
     position: relative;
-    width: 100%;
+    
     min-height: 100vh;
     transform-style: preserve-3d;
     
@@ -275,8 +276,14 @@ body {
     text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
 }
 
-p {
+#about p {
     color: #fff;
+    padding-top: 2rem;
+}
+
+#about .info {
+    width: 80%;
+    margin: 0 auto;
 }
 
 /* cards */
@@ -488,6 +495,33 @@ p {
     text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
 }
 
-p {
+#resume p {
+    color: #fff;
+}
+
+/* skills */
+
+
+#skills {
+    /* background: #060c21; */
+    background: #050505;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+#skills .text {
+    color: #000;
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 3vw;
+    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
+    
+    text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
+}
+
+#skills p {
     color: #fff;
 }
