--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -537,3 +537,33 @@ body {
     color: #fff;
     font-family: "JetBrains Mono", monospace;
 }
+
+
+/* projects */
+
+#projects {
+    background: #050505;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+#projects .text {
+    color: #000;
+    font-family: "JetBrains Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 3vw;
+    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
+    
+    text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
+}
+
+#projects p {
+    color: #fff;
+    font-family: "JetBrains Mono", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-style: normal;
+}
