--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -24,6 +24,12 @@ section {
     /* width: 100vw; */
 }
 
+#home, #about, #resume, #skills, #projects, #testimonials {
+    position: relative;
+    min-height: 100vh;
+    transform-style: preserve-3d;
+}
+
 
 /* logo */
 /* img[alt='logo'] {
@@ -87,9 +93,14 @@ nav a.router-link-exact-active {
     grid-template-rows: auto minmax(100dvh, 100%) auto;
 }
 
-/* footer {
+footer {
     color: #fff;
-} */
+    background: #050505;
+    font-family: "JetBrains Mono", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-style: normal;
+}
 
 /* section */
 
@@ -106,7 +117,7 @@ nav a.router-link-exact-active {
 
 /* home */
 
-html {
+/* html {
     height: 100%;
     margin: 0;
     overflow: hidden;
@@ -118,6 +129,21 @@ body {
     transform-style: preserve-3d;
     overflow-x: hidden;
     overflow-y: auto; 
+    background: #050505;
+} */
+
+html {
+    height: 100%;
+    margin: 0;
+    overflow: auto; /* Change to auto or remove overflow property */
+}
+
+body {
+    height: 100%;
+    perspective: 1px;
+    transform-style: preserve-3d;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-y: auto;   /* Allow vertical scrolling */
     background: #050505;
 }
 
@@ -165,6 +191,7 @@ body {
     height: 100vh;
     width: 50vw;
 }
+
 
 #home .text {
     font-family: "Orbitron", monospace;
@@ -293,194 +320,10 @@ body {
     margin: 0 auto;
 }
 
-/* cards */
-
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
-
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-} */
-
-.hobbies {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+#about h5 {
+    font-family: "Poppins";
 }
 
-.card-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    /* padding: 2rem; */
-    /*min-height: 100vh; */
-    /* background: #010615; */
-    /* background: #fff; */
-    width: 380px;
-    padding: 0 0 !important;
-}
-
-.box {
-    position: relative;
-    width: 300px;
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 40px;
-    background: #000;
-    transition: 0.5s;
-}
-
-.box:hover {
-    height: 550px !important;
-}
-
-.box:nth-child(1):hover,
-.box:nth-child(2):hover,
-.box:nth-child(3):hover {
-    height: 520px;
-}
-
-.box .imgBx {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.box .imgBx img {
-    max-width: 100%;
-    opacity: 0.1;
-    transition: 0.5s;
-    overflow: hidden;
-}
-
-.box:hover .imgBx img {
-    opacity: 1;
-}
-
-.box::before {
-    content: '';
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    background: #fff;
-    z-index: -1;
-
-}
-
-.box::after {
-    content: '';
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    background: #fff;
-    z-index: -2;
-    filter: blur(40px);
-
-}
-
-/*.box::before,
-.box::after {
-    background: linear-gradient(235deg, #89ff00, #010615, #00bcd4);
-}
-
-.box:nth-child(2):before,
-.box:nth-child(2):after {
-    background: linear-gradient(235deg, #ff005e, #010615, #fbff00);
-}
-
-.box:nth-child(3):before,
-.box:nth-child(3):after {
-    background: linear-gradient(235deg, #772aff, #010615, #2196F3);
-}*/
-
-.box::before,
-.box::after {
-    background: linear-gradient(235deg, #B8860B, #010615, #B8860B);
-}
-
-.box .content {
-    /* position: absolute; */
-    bottom: 0;
-    left: 10px;
-    right: 10px;
-    bottom: 10px;
-    height: 90px;
-    background: rgba(0, 0, 0, 0.4);
-    display: flex;
-    text-align: center;
-    flex-direction: column;
-    opacity: 0;
-    transition: 0.5s;
-    margin-top: 140px;
-    font-family: Poppins;
-    padding-bottom: 10px;
-}
-
-.box:hover .content {
-    opacity: 1;
-    padding: 10px;
-}
-
-.box .content h5 {
-    font-size: 20px;
-    color: #fff;
-    font-weight: 500;
-    line-height: 20px;
-    letter-spacing: 1px;
-}
-
-.box .content p {
-    font-size: 14px;
-    color: #fff;
-    font-weight: 200;
-    line-height: 20px;
-    letter-spacing: 2px;
-    /* padding-bottom: 10px;  not working */
-}
-
-.box .content {
-    font-size: 14px;
-    color: #fff;
-    font-weight: 200;
-    line-height: 20px;
-    letter-spacing: 2px;
-}
-
-
-@media (max-width: 330px) {
-    .box {
-        height: 230px;
-    }
-
-    .box:hover {
-        height: 330px;
-    }
-
-    .box .content h5 {
-        font-size: 16px;
-    }
-
-    .box .content h5 span {
-        font-size: 12px;
-    }
-
-
-}
 
 /* resume */
 
@@ -547,6 +390,7 @@ body {
     display: flex;
     justify-content: center;
     min-height: 100vh;
+    
 }
 
 #projects .text {
@@ -567,6 +411,10 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     font-style: normal;
+}
+
+#projects h5 {
+    font-family: "Poppins";
 }
 
 /* Testimonials */
@@ -597,3 +445,38 @@ body {
     font-style: normal;
     font-style: normal;
 }
+
+#testimonials h5 {
+    font-family: "Poppins";
+}
+
+/* contact */
+
+#contact {
+    background: #050505;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    
+}
+
+#contact .text {
+    color: #000;
+    font-family: "JetBrains Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 3vw;
+    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
+    
+    text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
+}
+
+#contact p {
+    color: #fff;
+    font-family: "JetBrains Mono", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-style: normal;
+}
+
