--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -95,11 +95,15 @@ nav a.router-link-exact-active {
 
 footer {
     color: #fff;
-    background: #050505;
+    background: #000;
     font-family: "JetBrains Mono", monospace;
     font-optical-sizing: auto;
     font-style: normal;
     font-style: normal;
+}
+
+footer p {
+    padding-top: 2rem;
 }
 
 /* section */
@@ -117,48 +121,27 @@ footer {
 
 /* home */
 
-/* html {
-    height: 100%;
-    margin: 0;
-    overflow: hidden;
-}
 
-body {
-    height: 100%;
-    perspective: 1px;
-    transform-style: preserve-3d;
-    overflow-x: hidden;
-    overflow-y: auto; 
-    background: #050505;
-} */
 
 html {
     height: 100%;
     margin: 0;
-    overflow: auto; 
+    overflow-x: auto;
+    /* box-sizing: border-box; */
 }
 
 body {
-    height: 100%;
+    min-height: 100vh;
     perspective: 1px;
     transform-style: preserve-3d;
-    overflow-x: hidden;
-    overflow-y: auto;
     background: #050505;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
-.video-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-    transform: translateZ(-1px) scale(2);
-}
 
-#home, #about {
+
+ #about {
     position: relative;
     
     min-height: 100vh;
@@ -166,118 +149,6 @@ body {
     
 }
 
-#home::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    transform: translateZ(-1px) scale(2);
-}
-
-#home .content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) translateZ(0.5px);
-    text-align: center;
-    color: #000;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    width: 50vw;
-}
-
-
-#home .text {
-    font-family: "Orbitron", monospace;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-size: 4rem;
-    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
-    text-shadow: 2px 2px 4px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.5);
-}
-
-#home .title {
-    font-family: "JetBrains Mono", monospace;
-    font-optical-sizing: auto;
-    font-style: normal;
-    font-size: 1.8rem;
-    text-shadow: 2px 2px 4px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.5);
-}
-
-#home .home-image img {
-    width: 400px;
-    height: auto;
-    /* margin-top: 20px; */
-    /* border-radius: 10%; */
-    padding: 10px;
-    opacity: 0.85;
-}
-
-.home-image {
-    position: relative;
-    width: 410px;
-    height: 410px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-    transition: 0.5s;
-    background: #000;
-}
-
-.home-image::before {
-    content: '';
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    background: #fff;
-    z-index: -1;
-
-}
-
-.home-image::after {
-    content: '';
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    right: -2px;
-    bottom: -2px;
-    background: #fff;
-    z-index: -2;
-    filter: blur(40px);
-
-}
-
-.home-image .profile {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.home-image .profile img {
-    max-width: 100%;
-    /* opacity: 0.4; */
-    transition: 0.5s;
-    overflow: hidden;
-}
-
-.home-image::before,
-.home-image::after {
-    background: linear-gradient(235deg, #B8860B, #010615, #B8860B);
-}
 
 .headings {
     font-family: "Orbitron", monospace;
@@ -290,7 +161,7 @@ body {
 
 #about {
     /* background: #060c21; */
-    background: #050505;
+    background: #000;
     display: flex;
     justify-content: center;
     min-height: 100vh;
@@ -366,7 +237,7 @@ body {
 
 #skills {
     /* background: #060c21; */
-    background: #050505;
+    background: #000;
     display: flex;
     justify-content: center;
     min-height: 100vh;
@@ -393,7 +264,7 @@ body {
 /* projects */
 
 #projects {
-    background: #050505;
+    background: #000;
     display: flex;
     justify-content: center;
     min-height: 100vh;
@@ -427,7 +298,7 @@ body {
 /* Testimonials */
 
 #testimonials {
-    background: #050505;
+    background: #000;
     display: flex;
     justify-content: center;
     min-height: 100vh;
@@ -449,7 +320,6 @@ body {
     color: #fff;
     font-family: "JetBrains Mono", monospace;
     font-optical-sizing: auto;
-    font-style: normal;
     font-style: normal;
 }
 
@@ -508,3 +378,18 @@ body {
     box-shadow: 0 0 15px cyan;
 }
 
+#contact i {
+    color: #fff;
+}
+
+#contact a {
+    color:#fff;
+    font-family: "JetBrains Mono", monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+#contact a:hover,
+#contact i:hover {
+    color: cyan
+}
