--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -8,9 +8,11 @@
 }
 
 /* universal selector */
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
     display: none;
 }
+
+
 
 /* Select all images */
 /* img {
@@ -47,7 +49,7 @@ section {
     /* background-color: #010615; */
   }
 
-.nav {
+/* .nav {
     padding: 30px;
 }
 
@@ -56,20 +58,7 @@ nav a {
     color: rgb(29, 29, 29);
 }
 
-nav a.router-link-exact-active {
-    color: #42b983
-}
-  
-/* .offcanvas-nav {
-    display: flex;
-    flex-direction: column;
-}
 
-.nav-inline {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-} */
 
 .navlinks {
     text-decoration: none !important;
@@ -82,7 +71,7 @@ nav a.router-link-exact-active {
 
 .nav {
     background-color: black !important;
-}
+} */
 
 
 
@@ -121,10 +110,18 @@ footer p {
 
 /* home */
 
+:root {
+    font-family: "JetBrains Mono", monospace;
+    font-size: 16px;
+    /* --text-primary: cyan;
+    --text-secondary: #fff;
+    --bg-primary: #23232e;
+    --bg-secondary: #141418; */
+  }
 
 
 html {
-    height: 100%;
+    min-height: 100vh;
     margin: 0;
     overflow-x: auto;
     /* box-sizing: border-box; */
@@ -137,7 +134,13 @@ body {
     background: #050505;
     overflow-x: hidden;
     overflow-y: scroll;
+    margin: 0;
+    padding: 0;
 }
+
+/* main {
+    margin-left: 5rem;
+} */
 
 
 
