--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: 'Poppins', sans-serif; */
 }
 
 /* universal selector */
@@ -12,18 +11,13 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+main {
+    margin-left: 5rem;
+}
 
-
-/* Select all images */
-/* img {
-    aspect-ratio: 1;
-    object-fit: cover;
-    object-position: center;
-} */
 
 section {
     min-height: 100vh;
-    /* width: 100vw; */
 }
 
 #home, #about, #resume, #skills, #projects, #testimonials,#contact {
@@ -33,11 +27,6 @@ section {
 }
 
 
-/* logo */
-/* img[alt='logo'] {
-    width: 5rem;
-} */
-
 /* from appview */
 
 #app {
@@ -46,7 +35,6 @@ section {
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color:  rgb(29, 29, 29) ;
-    /* background-color: #010615; */
   }
 
 /* ease in */
@@ -66,10 +54,7 @@ section {
 
 /* wrapper */
 
-:is(.wrapper) {
-    display: grid;
-    grid-template-rows: auto minmax(100dvh, 100%) auto;
-}
+
 
 footer {
     color: #fff;
@@ -123,11 +108,15 @@ footer p {
     }
 
 }
-/* 
-img {
-    aspect-ratio: 1;
-    
-} */
+
+@media (max-width:600px) {
+
+    main {
+        margin: 0;
+      }
+}
+
+
 
 
 /* home */
@@ -135,34 +124,22 @@ img {
 :root {
     font-family: "JetBrains Mono", monospace;
     font-size: 16px;
-    /* --text-primary: cyan;
-    --text-secondary: #fff;
-    --bg-primary: #23232e;
-    --bg-secondary: #141418; */
-  }
-
+}
 
 html {
     min-height: 100vh;
     margin: 0;
     overflow-x: auto;
-    /* box-sizing: border-box; */
 }
 
 body {
     min-height: 100vh;
-    perspective: 1px;
-    transform-style: preserve-3d;
     background: #050505;
     overflow-x: hidden;
     overflow-y: scroll;
     margin: 0;
     padding: 0;
 }
-
-/* main {
-    margin-left: 5rem;
-} */
 
 
 
@@ -185,7 +162,6 @@ body {
 /* about */
 
 #about {
-    /* background: #060c21; */
     background: #000;
     display: flex;
     justify-content: center;
@@ -199,8 +175,6 @@ body {
     font-weight: 500;
     font-style: normal;
     font-size: 3vw;
-    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
-    
     text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
 }
 
@@ -244,8 +218,6 @@ body {
     font-weight: 500;
     font-style: normal;
     font-size: 3vw;
-    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
-    
     text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
 }
 
@@ -261,7 +233,6 @@ body {
 
 
 #skills {
-    /* background: #060c21; */
     background: #000;
     display: flex;
     justify-content: center;
@@ -275,8 +246,6 @@ body {
     font-weight: 500;
     font-style: normal;
     font-size: 3vw;
-    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
-    
     text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
 }
 
@@ -302,10 +271,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-    font-size: 3vw;
-    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
-    
-    text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
+    font-size: 3vw;text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
 }
 
 #projects p {
@@ -335,10 +301,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-    font-size: 3vw;
-    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
-    
-    text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
+    font-size: 3vw;text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
 }
 
 #testimonials p {
@@ -368,10 +331,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-    font-size: 3vw;
-    /* text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 5px 5px 70px rgba(255, 255, 255, 0.5); */
-    
-    text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
+    font-size: 3vw; text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
 }
 
 #contact p,
@@ -393,9 +353,7 @@ body {
 }
 
 #contact button {
-    /* background-color: rgb(143, 232, 232); */
     background-color: #fff;
-    /* border-color: #fff; */
     color: #000;
     font-family: "JetBrains Mono", monospace;
     font-optical-sizing: auto;
