--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -118,10 +118,6 @@ footer p {
 }
 
 
-
-
-/* home */
-
 :root {
     font-family: "JetBrains Mono", monospace;
     font-size: 16px;
@@ -142,6 +138,24 @@ body {
     padding: 0;
 }
 
+
+/* home */
+
+
+#home {
+    position: relative;
+    
+    min-height: 100vh;
+    transform-style: preserve-3d;
+    
+}
+
+#home::before {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    
+}
 
 
  #about {
@@ -167,6 +181,7 @@ body {
     display: flex;
     justify-content: center;
     min-height: 100vh;
+    z-index: 2;
 }
 
 #about .text {
@@ -237,7 +252,8 @@ body {
     background: #020202;
     display: flex;
     justify-content: center;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    padding-bottom: 4rem;
 }
 
 #skills .text {
@@ -250,9 +266,14 @@ body {
     text-shadow: 2px 2px 5px #DAA520, 5px 5px 70px rgba(255, 255, 255, 0.3);
 }
 
-#skills p {
+#skills p,
+#skills .skill-item {
     color: #fff;
     font-family: "JetBrains Mono", monospace;
+}
+
+#skills h5 {
+    font-family: "Poppins";
 }
 
 
