--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -102,7 +102,7 @@ footer p {
     }
 
     p {
-        font-size: 12px;
+        font-size: 12px !important;
     }
 
     .headings {
@@ -172,7 +172,7 @@ body {
     font-family: "Orbitron", monospace;
     font-optical-sizing: auto;
     font-style: normal;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 /* about */
