--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -6,10 +6,35 @@
     box-sizing: border-box;
 }
 
-/* universal selector */
-body::-webkit-scrollbar {
+
+/* body::-webkit-scrollbar {
+    display: none;
+} */
+
+@media (max-width:475) {
+    body::-webkit-scrollbar {
     display: none;
 }
+
+body {
+    margin: 0;
+    padding: 0 !important;
+}
+
+
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    /* background-color: transparent; */
+    background-color: #000;
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(#111010, #21d4fd);
+    border-radius: 100px;
+  }
 
 main {
     margin-left: 5rem;
@@ -114,8 +139,11 @@ footer p {
 @media (max-width:600px) {
 
     main {
-        margin: 0;
+        margin: 0 !important;
+        /* padding: 0 !important;
+        width: 100vw; */
       }
+    
 }
 
 
@@ -376,21 +404,23 @@ body {
 }
 
 #contact button {
-    background-color: #fff;
+    background-color: #f6e7e7;
     color: #000;
     font-family: "JetBrains Mono", monospace;
     font-optical-sizing: auto;
     font-style: normal;
     box-shadow: 0 0 15px cyan;
+    border-radius: 0px 10px;
 }
 
 #contact button:hover {
-    background-color: cyan;
     color: #000;
     font-family: "JetBrains Mono", monospace;
     font-optical-sizing: auto;
     font-style: normal;
     box-shadow: 0 0 15px cyan;
+    scale: 1.02;
+    transition: 0.2s ease-in-out;
 }
 
 #contact i {
