--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +13,7 @@
     display: none;
 } */
 
-@media (max-width:475) {
+/* @media (max-width:475) {
     body::-webkit-scrollbar {
     display: none;
 }
@@ -22,7 +24,7 @@ body {
 }
 
 
-}
+} */
 
 /* Scrollbar */
 ::-webkit-scrollbar {
@@ -97,6 +99,11 @@ footer p {
 
 /* section */
 
+p, label, .socials a span, .btn, .form-control, .skill-item {
+    /* font-size: 12px !important; */
+    font-weight: 200;
+}
+
 
 
 /* media query */
@@ -126,12 +133,16 @@ footer p {
         width: 100vw !important;
     }
 
-    p {
+    p, label, .socials a span, .btn, .form-control {
         font-size: 12px !important;
     }
 
     .headings {
         font-size: 2rem;
+    }
+
+    footer p {
+        font-size: 12px !important;
     }
 
 }
@@ -272,6 +283,10 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     font-style: normal;
+}
+
+#resume h5 {
+    font-family: "Poppins";
 }
 
 /* skills */
